United Commonwealth work and achievement recurrence bug fixed

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -103,6 +103,19 @@ AME_Melbourne_Acroplex_Overhaul_Project:0 "The Melbourne Arcoplex Renewal Projec
 AME_Melbourne_Acroplex_Overhaul_Population_Shift:0 "Melbourne Arcoplex Population Redistribution"
 AME_Lang_EIEC_Showdown:0 "The EIEC calls Lang's Bluff"
 
+AME_Freedmen_Agitation:0 "Freedman Agitation"
+AME_Southerner_Agitation:0 "Southern Agitation"
+
+PB_Increase_Warhawk_Power:0 "£UC_SI_Warhawks Increase the power of the Warhawk Lobby"
+PB_Increase_Freedmen_Funding:0 "£UC_SI_Freedmen Increase Funding for Freedmen Provinces"
+PB_Increase_Southern_Funding:0 "£UC_SI_Southerners Increase Funding for Southern Provinces"
+PB_Promote_EIEC_Ventures:0 "£UC_SI_Corporate Promote EIEC Ventures"
+PB_Promote_Union_Membership:0 "£UC_SI_Unions Promote Union Membership"
+PB_EIEC_Expansion_Targets:0 "£UC_SI_Corporate Acquire Edison Expansion contracts"
+PB_Megacorps_Ford_Production_Quotas:0 "£UC_SI_Corporate Request Higher Production Quotas"
+PB_Megacorps_Union_Standard_Imports:0 "£UC_SI_Corporate Establish a Union Standard Import Line"
+PB_Support_American_Texas:0 "[ATX.GetFlag] Support American Texas"
+
 ##########################
 # COSMETIC TAG
 ##########################
@@ -253,6 +266,30 @@ PB_AME_Social_Credit_Technocrats_Full:0 "SoCred Party: Technocrats Dominant"
 
 PB_AME_The_Giant_Wakes:0 "The Giant Wakes"
 PB_AME_Bulwark_Against_Extremism:0 "Bulwark Against Extremism"
+PB_AME_Revolutionary_Fervor_Low:0 "Revolutionary Fervor: Low"
+PB_AME_Revolutionary_Fervor_Moderate:0 "Revolutionary Fervor: Moderate"
+PB_AME_Revolutionary_Fervor_High:0 "Revolutionary Fervor: High"
+PB_AME_Revolutionary_Fervor_Very_High:0 "Revolutionary Fervor: Very High"
+PB_AME_Revolutionary_Militias:0 "Revolutionary Militias"
+PB_AME_Revolutionary_Democratic_Constitution:0 "Classical Jacobin Constitution"
+PB_AME_Revolutionary_Vanguardist_Constitution:0 "Directorial Jacobin Constitution"
+PB_AME_Revolutionary_Economic_Transition:0 "Revolutionary Economic Transition"
+PB_AME_Washingtonian_Legacy:0 "Washingtonian Revisionism"
+PB_AME_Revolution_Arsenal:0 "Arsenal of the American Revolution"
+PB_AME_American_Infiltration:0 "The Underground Railroad"
+PB_AME_American_Isolationism:0 "American Isolationism"
+
+PB_AME_Flight_of_the_Royals:0 "Flight of the Royals"
+PB_AME_Good_Neighbor_Policy:0 "Royalists Pardoned"
+PB_AME_Imperial_League:0 "Imperial Economic Management League"
+PB_AME_Continental_Superiority:0 "Continental Superiority"
+PB_AME_Ford_Production_Quotas_idea:0 "Increased Production Quotas"
+PB_AME_Union_Strikes_idea:0 "Union Strikes"
+AME_Megacorp_Manuevers:0 "Megacorp Manuevers"
+
+AME_Suppressed_Agitation:0 "Agitation Suppressed"
+AME_Suppressed_Unions:0 "Union Agitation Suppressed"
+AME_Edison_Placated:0 "Edison Lobbyists Placated"
 
 ##########################
 # TRAITS
@@ -658,7 +695,37 @@ PB_AME_Crush_Neo_Imperialist_Tyranny:0 "Crush Neo-Imperialist Tyranny"
 PB_AME_Crush_Neo_Imperialist_Tyranny_desc:0 ""
 PB_AME_Reach_Out_To_Latin_America:0 "Reach Out To Latin America"
 PB_AME_Reach_Out_To_Latin_America_desc:0 ""
+
 PB_AME_Second_Revolution:0 "Second Time's the Charm"
+PB_AME_The_British_are_Coming:0 "Unity against the British"
+PB_AME_Nationalize_Megacorps:0 "Divest America of the Kleptocrats"
+PB_AME_Establish_Revolutionary_Tribunal:0 "Declare the Revolutionary Tribunal"
+PB_AME_Revolutionary_War_Economics:0 "War Republicanism"
+PB_AME_Immediate_Collectivization:0 "Rip the Bandaid Off"
+PB_AME_Gradual_Shift:0 "The Future cannot be Rushed"
+PB_AME_Target_the_Military:0 "Questionable Loyalties in the Military?"
+PB_AME_Empower_Militias:0 "Empower Revolutionary Militias"
+PB_AME_First_Continental_Congress:0 "Begin the Revolutionary Continental Congress"
+PB_AME_Vanguardist_State:0 "Continue Congressional Rule"
+PB_AME_Democratic_State:0 "The Classical Jacobin Ideal"
+PB_AME_Rebuild_the_Economic_Shitshow:0 "Reviving the Economic Disaster"
+PB_AME_Cultural_Reconstruction:0 "Cultural Reconstruction"
+PB_AME_Attack_Free_States:0 "Resume Southern Hostilities"
+PB_AME_Enforce_Industrialization_Quotas:0 "Enforce Industrialization Quotas"
+PB_AME_Economic_Redistribution:0 "Initiate Economic Redistribution"
+PB_AME_Collectivize_Melbourne:0 "Bring the Revolution to the Arcoplex"
+PB_AME_Economic_Transition:0 "Finalize the Economic Transition"
+PB_AME_American_Literacy_Campaign:0 "National Literacy Campaign"
+PB_AME_Eugenics_Question:0 "On the Sociogenetics Question"
+PB_AME_Historical_Revisionism:0 "Rewriting History"
+PB_AME_Protect_the_Augmented:0 "Heal the Scars of the First War"
+PB_AME_Reform_Military:0 "Modernize the Revolutionary Army"
+PB_AME_Reorganize_MJ11:0 "Establish Majestic Twelve"
+PB_AME_Military_Expansion_Program:0 "The Arsenal of Revolution"
+PB_AME_Spread_Tendrils:0 "Establish the Underground Railroad"
+PB_AME_Fortress_America:0 "Republicanism in One Country"
+PB_AME_Republican_International:0 "Proclaim the Republican International"
+PB_AME_Deal_with_the_Devil:0 "A Deal with the Devil"
 
 ##########################
 # MINISTERS
@@ -938,6 +1005,15 @@ Unicom.24.t:0 "An End To The Halibut Wars"
 Unicom.24.d:0 ""
 Unicom.24.a:0 "Another victory for diplomacy."
 
+Unicom.25.t:0 "Union Standard Imports"
+Unicom.25.d:0 ""
+Unicom.25.a:0 "Anything can be bought and sold for the right oil."
+
+Unicom.26.t:0 "Union Standard Offers to Sweeten the Deal"
+Unicom.26.d:0 ""
+Unicom.26.a:0 "More Oil? Sign us up!"
+Unicom.26.b:0 "We're good, thanks."
+
 Unicom_Elections.1.t:0 "The Dust Settles on the Crisis"
 Unicom_Elections.1.d:0 "PLACEHOLDER With the Crisis defeated by force, Coolidge faces harsh criticism from both sides of the aisle in parliament for using the military against American citizens."
 Unicom_Elections.1.a:0 "We prevented a revolution and THIS is the thanks we get?"
@@ -1075,6 +1151,92 @@ Unicom_Revolution.6.t:0 "Southern Provinces Announce Intent to Secede"
 Unicom_Revolution.6.d:0 ""
 Unicom_Revolution.6.a:0 "Goddamn Dixie scum!"
 
+Unicom_Revolution.7.t:0 "The Second Revolutionary War"
+Unicom_Revolution.7.d:0 ""
+Unicom_Revolution.7.a:0 "Let's finish this."
+
+Unicom_Revolution.8.t:0 "The Revolutionary Tribunal Meets"
+Unicom_Revolution.8.d:0 ""
+Unicom_Revolution.8.a:0 "The National Razor awaits our enemies."
+
+Unicom_Revolution.9.t:0 "Revolutionary Tribunal - The Philadelphia Guards"
+Unicom_Revolution.9.d:0 ""
+Unicom_Revolution.9.a:0 "Not Guilty"
+Unicom_Revolution.9.b:0 "Guilty, Imprisonment"
+Unicom_Revolution.9.c:0 "Guilty, Death"
+
+Unicom_Revolution.10.t:0 "Revolutionary Tribunal - The Edison Remnants"
+Unicom_Revolution.10.d:0 ""
+Unicom_Revolution.10.a:0 "Not Guilty"
+Unicom_Revolution.10.b:0 "Guilty, Imprisonment"
+Unicom_Revolution.10.c:0 "Guilty, Death"
+
+Unicom_Revolution.11.t:0 "Revolutionary Tribunal - Smedley Butler"
+Unicom_Revolution.11.d:0 ""
+Unicom_Revolution.11.a:0 "Not Guilty"
+Unicom_Revolution.11.b:0 "Guilty, Imprisonment"
+Unicom_Revolution.11.c:0 "Guilty, Death"
+
+Unicom_Revolution.12.t:0 "Revolutionary Tribunal - The Moderates"
+Unicom_Revolution.12.d:0 ""
+Unicom_Revolution.12.a:0 "This is completely out of control, disband the tribunal"
+Unicom_Revolution.12.b:0 "Guilty. Sentence is Death."
+
+Unicom_Revolution.13.t:0 "The Free States declare Secession!"
+Unicom_Revolution.13.d:0 ""
+Unicom_Revolution.13.a:0 "You've got to be fucking kidding me."
+
+Unicom_Revolution.14.t:0 "The South Yet Stands"
+Unicom_Revolution.14.d:0 ""
+Unicom_Revolution.14.a:0 "Yeah, well, we'll be back."
+
+Unicom_Revolution.15.t:0 "The First Revolutionary Congress"
+Unicom_Revolution.15.d:0 ""
+Unicom_Revolution.15.a:0 "We must stay true to democratic principles."
+Unicom_Revolution.15.b:0 "The Revolution must be protected at all costs!"
+
+Unicom_Revolution.16.t:0 "The Issue of the Negro Vote"
+Unicom_Revolution.16.d:0 ""
+Unicom_Revolution.16.a:0 "Democracy will know no Color Barrier"
+Unicom_Revolution.16.b:0 "A separate, but equal Revolution"
+
+Unicom_Revolution.17.t:0 "Women in Congress"
+Unicom_Revolution.17.d:0 ""
+Unicom_Revolution.17.a:0 "Women will have the same rights as men."
+Unicom_Revolution.17.b:0 "Let's not get too hasty here, right?"
+
+Unicom_Revolution.18.t:0 "The Revolutionary Flag"
+Unicom_Revolution.18.d:0 ""
+Unicom_Revolution.18.a:0 "The Jacobin Standard"
+Unicom_Revolution.18.b:0 "The Stars and Leaf"
+Unicom_Revolution.18.c:0 "The Modified War Flag"
+
+Unicom_Revolution.19.t:0 "The Congress Concludes"
+Unicom_Revolution.19.d:0 ""
+Unicom_Revolution.19.a:0 "And on to the issue of governance..."
+
+Unicom_Revolution.20.t:0 "The Sociogenetics Question"
+Unicom_Revolution.20.d:0 ""
+Unicom_Revolution.20.a:0 "The policy shall remain."
+Unicom_Revolution.20.b:0 "Perhaps we can relax it a bit?"
+Unicom_Revolution.20.c:0 "Sociogenetics are inherently anti-revolutionary."
+
+Unicom_Revolution.21.t:0 "Women's Rights Groups Protest"
+Unicom_Revolution.21.d:0 ""
+Unicom_Revolution.21.a:0 "What? No."
+Unicom_Revolution.21.b:0 "Perhaps we should reconsider..."
+
+Unicom_Revolution.22.t:0 "The Legacy of the First Revolution"
+Unicom_Revolution.22.d:0 ""
+Unicom_Revolution.22.a:0 "Washington was a martyr for America"
+Unicom_Revolution.22.b:0 "Maybe history is a bit more nuanced?"
+Unicom_Revolution.22.c:0 "Washington was a power hungry autocrat"
+
+Unicom_Revolution.23.t:0 "The Strangest Telegram"
+Unicom_Revolution.23.d:0 ""
+Unicom_Revolution.23.a:0 "This is stupid. Let's do it."
+Unicom_Revolution.23.b:0 "No, this is just stupid."
+
 Unicom_Foreign_Policy.1.t:0 "A Curious Proposition"
 Unicom_Foreign_Policy.1.d:0 ""
 Unicom_Foreign_Policy.1.a:0 "Why not give it a try?"
@@ -1118,6 +1280,27 @@ Unicom_Foreign_Policy.9.b:0 "Reject the results, there will be no insubordinatio
 Unicom_Foreign_Policy.10.t:0 "Britain rejects the Plebiscite results!"
 Unicom_Foreign_Policy.10.d:0 ""
 Unicom_Foreign_Policy.10.a:0 "They can't do that! Shoot them, or something!"
+
+Unicom_Foreign_Policy.11.t:0 "Anglo-American Settlers Rise up in Texas"
+Unicom_Foreign_Policy.11.d:0 ""
+Unicom_Foreign_Policy.11.a:0 "Offer them our support"
+Unicom_Foreign_Policy.11.b:0 "Intervene Directly!"
+Unicom_Foreign_Policy.11.c:0 "Declare neutrality"
+
+Unicom_Foreign_Policy.12.t:0 "American Intervention in Tejas"
+Unicom_Foreign_Policy.12.d:0 ""
+Unicom_Foreign_Policy.12.a:0 "Demand they remain neutral!"
+Unicom_Foreign_Policy.12.b:0 "Say nothing."
+Unicom_Foreign_Policy.12.c:0 "Quietly support Tejas to curb their ambitions."
+
+Unicom_Foreign_Policy.13.t:0 "London demands a Withdrawal"
+Unicom_Foreign_Policy.13.d:0 ""
+Unicom_Foreign_Policy.13.a:0 "Imperial unity is more important."
+Unicom_Foreign_Policy.13.b:0 "Tell London to fuck right off."
+
+Unicom_Foreign_Policy.14.t:0 "America agrees to withdraw from Texas"
+Unicom_Foreign_Policy.14.d:0 ""
+Unicom_Foreign_Policy.14.a:0 "As they should."
 
 Unicom_Independent.1.t:0 "The First Presidential Referendum"
 Unicom_Independent.1.d:0 ""
@@ -1247,8 +1430,26 @@ PB_AME_Large_Fella_Decrease_tt:0 "£decision_icon_small  Lang's control over the
 PB_AME_SoCred_Power_Struggle_Increase_tt:0 "£decision_icon_small  §PThe TechnoLabourite Wing of the SoCreds will be empowered§!"
 PB_AME_SoCred_Power_Struggle_Decrease_tt:0 "£decision_icon_small  §PThe Agrarian Wing of the SoCreds will be empowered§!"
 
-AME_Megacorp_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Corporate §YMegacorporations§!"
+AME_Megacorp_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Corporate §YMegacorporations§!"
+AME_Megacorp_Support_Government_tt:0 "We have §GGood§! relations with the £UC_SI_Corporate §YMegacorporations§!"
+
 AME_Southerners_Support_Government_tt:0 "We have §Gpositive§! relations with the £UC_SI_Southerners §YSoutherners§!"
+AME_Southerners_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Southerners §YSoutherners§!"
+
+AME_Freedmen_Support_Government_tt:0 "We have §Gpositive§! relations with the £UC_SI_Freedmen §YFreedmen§!"
+AME_Freedmen_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Freedmen §YFreedmen§!"
+
+AME_Unions_Support_Government_tt:0 "We have §Gpositive§! relations with the £UC_SI_Unions §YTrade Unions§!"
+AME_Unions_Not_Support_Government_tt:0 "We have §rpoor§! relations with the £UC_SI_Unions §YTrade Unions§!"
+
+AME_Southerners_Not_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Gnot§! currrently radicalized"
+AME_Southerners_Radicalized_tt:0 "£UC_SI_Southerners §YSoutherners§! are §Rradicalized§!"
+
+AME_Freedmen_Not_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§! are §Gnot§! currrently radicalized"
+AME_Freedmen_Radicalized_tt:0 "£UC_SI_Freedmen §YFreedmen§ are §Rradicalized§!"
+
+AME_Peaceniks_Out_of_Power_tt:0 "£UC_SI_Peaceniks The §YPeacenik Lobby§! is §Gnot§! currently empowered"
+AME_Warhawks_in_Power_tt:0 "£UC_SI_Warhawks The §YWarhawk Lobby§! is currently §Gempowered§!"
 
 AME_Monopoly_War_Warning_tt:0 "§rGoing to war against America's Megacorps is a costly endeavor, and we will suffer significant maluses until the political conflict concludes.§!"
 
@@ -1278,6 +1479,27 @@ PB_AME_Promote_Population_Control_tt:0 "§YOnce chosen, this will begin the proc
 PB_AME_National_Alcohol_Ban_tt:0 "£decision_icon_small §RLiterally Everyone Opposes this Policy§!"
 
 AME_Won_Imp_War:0 "Has won the Imperial Civil War"
+
+AME_Revolutionary_Tribunal_Available_tt:0 "£decision_icon_small §RThe Revolutionary Tribunal will be established, and we will cut out any scrap of reaction that we find. Terror is merely swift justice.§!"
+PB_AME_Target_the_Military_tt:0 "£decision_icon_small §RAll Commanders with the trait§! §YBritish Loyalties§! §Rwill be liquidated§!"
+AME_Revolutionary_War_Incoming_tt:0 "§RThe Second Revolutionary War will begin in Two Weeks.§!"
+
+PB_AME_Increase_Revolutionary_Fervor_tt:0 "§RRevolutionary Fervor will Increase!§!"
+
+PB_AME_Ha_Ha_Centrist_tt:0 "§RNobody likes a fencesitter.§!"
+
+PB_AME_RevFlag_Option_1:0 "£UC_RevFlag_1"
+PB_AME_RevFlag_Option_2:0 "£UC_RevFlag_2"
+PB_AME_RevFlag_Option_3:0 "£UC_RevFlag_3"
+
+Imp_War_AME_Total_Vic_tt:0 "Has not §RNOT§! been victorious in the Imperial Civil War"
+
+AME_Suppressed_Agitation_tt:0 "§YAgitation from the Southern States and Freedmen will be temporarily suppressed.§!"
+AME_Suppressed_Unions_tt:0 "§YAgitation from the Unions will be temporarily suppressed.§!"
+AME_Edison_Placated_tt:0 "§YThe Megacorps will be placated. For now.§!"
+
+AME_Texas_Crisis_Intervention_tt:0 "§RWe will be able to intervene more directly in Texas should the situation allow it.§!"
+AME_Texas_Crisis_Neutrality_tt:0 "§RWe will be unable able to intervene more directly in Texas.§!"
 
 ##########################
 # PUPPET AUTONOMY
