--- a/localisation/english/PB_countries_l_english.yml
+++ b/localisation/english/PB_countries_l_english.yml
@@ -3660,30 +3660,30 @@ SAN_an_ADJ:0 "Indian"
  FSA_cn_ADJ:0 "Dixie"
  FSA_an_ADJ:0 "Dixie"
 
- BWN_ni:0 "Free People's Republic of New Africa"
- BWN_ni_DEF:0 "The Free People's Republic of New Africa"
- BWN_ds:0 "Free People's Republic of New Africa"
- BWN_ds_DEF:0 "The Free People's Republic of New Africa"
- BWN_rc:0 "Free People's Republic of New Africa"
- BWN_rc_DEF:0 "The Free People's Republic of New Africa"
- BWN_an:0 "Free People's Republic of New Africa"
- BWN_an_DEF:0 "The Free People's Republic of New Africa"
- BWN_cn:0 "Free People's Republic of New Africa"
- BWN_cn_DEF:0 "The Free People's Republic of New Africa"
- BWN_lb:0 "Free People's Republic of New Africa"
- BWN_lb_DEF:0 "The Free People's Republic of New Africa"
- BWN_ss:0 "Free People's Republic of New Africa"
- BWN_ss_DEF:0 "The Free People's Republic of New Africa"
- BWN_jc:0 "Free People's Republic of New Africa"
- BWN_jc_DEF:0 "The Free People's Republic of New Africa"
- BWN_ni_ADJ:0 "New African"
- BWN_rc_ADJ:0 "New African"
- BWN_lb_ADJ:0 "New African"
- BWN_ss_ADJ:0 "New African"
- BWN_jc_ADJ:0 "New African"
- BWN_ds_ADJ:0 "New African"
- BWN_cn_ADJ:0 "New African"
- BWN_an_ADJ:0 "New African"
+ BWN_ni:0 "Freedmen's Liberated Republic"
+ BWN_ni_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_ds:0 "Freedmen's Liberated Republic"
+ BWN_ds_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_rc:0 "Freedmen's Liberated Republic"
+ BWN_rc_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_an:0 "Freedmen's Liberated Republic"
+ BWN_an_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_cn:0 "Freedmen's Liberated Republic"
+ BWN_cn_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_lb:0 "Freedmen's Liberated Republic"
+ BWN_lb_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_ss:0 "Freedmen's Liberated Republic"
+ BWN_ss_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_jc:0 "Freedmen's Liberated Republic"
+ BWN_jc_DEF:0 "The Freedmen's Liberated Republic"
+ BWN_ni_ADJ:0 "Freedman"
+ BWN_rc_ADJ:0 "Freedman"
+ BWN_lb_ADJ:0 "Freedman"
+ BWN_ss_ADJ:0 "Freedman"
+ BWN_jc_ADJ:0 "Freedman"
+ BWN_ds_ADJ:0 "Freedman"
+ BWN_cn_ADJ:0 "Freedman"
+ BWN_an_ADJ:0 "Freedman"
 
  UAR_ni:0 "United Arab Republic"
  UAR_ni_DEF:0 "The United Arab Republic"
@@ -8845,21 +8845,21 @@ SAN_an_ADJ:0 "Indian"
   USA_cn_ADJ:0 "American"
   USA_an_ADJ:0 "American"
 
- ATX_ni:0 "Texan Republic"
+ ATX_ni:0 "Republic of American Texas"
  ATX_ni_DEF:0 "The American Republic of East Texas"
- ATX_ds:0 "Texan Republic"
+ ATX_ds:0 "Republic of American Texas"
  ATX_ds_DEF:0 "The American Republic of East Texas"
- ATX_rc:0 "Texan Republic"
+ ATX_rc:0 "Republic of American Texas"
  ATX_rc_DEF:0 "The American Republic of East Texas"
- ATX_an:0 "Texan Republic"
+ ATX_an:0 "Republic of American Texas"
  ATX_an_DEF:0 "The American Republic of East Texas"
- ATX_cn:0 "Texan Republic"
+ ATX_cn:0 "Republic of American Texas"
  ATX_cn_DEF:0 "The American Republic of East Texas"
- ATX_lb:0 "Texan Republic"
+ ATX_lb:0 "Republic of American Texas"
  ATX_lb_DEF:0 "The American Republic of East Texas"
- ATX_ss:0 "Texan Republic"
+ ATX_ss:0 "Republic of American Texas"
  ATX_ss_DEF:0 "The American Republic of East Texas"
- ATX_jc:0 "Texan Republic"
+ ATX_jc:0 "Republic of American Texas"
  ATX_jc_DEF:0 "The American Republic of East Texas"
  ATX_ni_ADJ:0 "American-Tejano"
  ATX_rc_ADJ:0 "American-Tejano"
