--- a/localisation/english/unit_l_english.yml
+++ b/localisation/english/unit_l_english.yml
@@ -367,6 +367,8 @@
  tripod_automat_desc:0 "Medium Automatic Mech"
  quadropod_automat:0 "Quadropod Automats"
  quadropod_automat_desc:0 "Heavy Automatic Mech"
+ clone_troopers:0 "Replicoid Battalion"
+ clone_troopers_desc:0 "Lobotomized Combat Teams, Disposable"
 
  recon:1 "Cavalry Recon Detachment"
  recon_desc:0 "Sending smaller groups to scout ahead before moving in the main force allows us to gather intelligence about where the enemy is and how many we are facing."
