--- a/localisation/english/PB_Technologies_l_english.yml
+++ b/localisation/english/PB_Technologies_l_english.yml
@@ -377,6 +377,11 @@
  razormaiden:0 "Razormaidens" 
 
  dependencies_x:0 "Is allowed to research this tech"
+ dependencies_clone_troopers:0 "Has Completed the Associated Special Project"
+
+ clone_vats_archetype:0 "Replicated Biomass"
+ clone_vats_archetype_desc:0 "The dream of any military is a soldier who is willing to accept any order without question. With modern science, we can achieve this dream, at least to some extent. Replicoids are functionally lobotomized of higher brain functions, but they retain enough intelligence to follow any order, no matter how ridiculous.\n\nWith this, we can supplement divisions with disposable lobotomites and focus on a higher quality core military."
+ clone_vats_0:0 "Replicated Biomass"
 
  special_forces_cowboys:0 "Cowboys"
  cat_cowboys:0 "Cowboys"
