--- a/localisation/english/PB_countries_cosmetic_l_english.yml
+++ b/localisation/english/PB_countries_cosmetic_l_english.yml
@@ -80,30 +80,30 @@
  PHI_Insurgency_cn_ADJ:0 "Filipino"
  PHI_Insurgency_an_ADJ:0 "Filipino"
 
- BWN_Insurgency_ni:0 "Revolutionary State of New Africa"
- BWN_Insurgency_ni_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_ds:0 "Revolutionary State of New Africa"
- BWN_Insurgency_ds_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_rc:0 "Revolutionary State of New Africa"
- BWN_Insurgency_rc_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_an:0 "Revolutionary State of New Africa"
- BWN_Insurgency_an_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_cn:0 "Revolutionary State of New Africa"
- BWN_Insurgency_cn_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_lb:0 "Revolutionary State of New Africa"
- BWN_Insurgency_lb_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_ss:0 "Revolutionary State of New Africa"
- BWN_Insurgency_ss_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_jc:0 "Revolutionary State of New Africa"
- BWN_Insurgency_jc_DEF:0 "the Revolutionary State of New Africa"
- BWN_Insurgency_ni_ADJ:0 "New African"
- BWN_Insurgency_rc_ADJ:0 "New African"
- BWN_Insurgency_lb_ADJ:0 "New African"
- BWN_Insurgency_ss_ADJ:0 "New African"
- BWN_Insurgency_jc_ADJ:0 "New African"
- BWN_Insurgency_ds_ADJ:0 "New African"
- BWN_Insurgency_cn_ADJ:0 "New African"
- BWN_Insurgency_an_ADJ:0 "New African"
+ BWN_Insurgency_ni:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_ni_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_ds:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_ds_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_rc:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_rc_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_an:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_an_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_cn:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_cn_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_lb:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_lb_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_ss:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_ss_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_jc:0 "Freedmen's Liberation Army"
+ BWN_Insurgency_jc_DEF:0 "The Freedmen's Liberation Army"
+ BWN_Insurgency_ni_ADJ:0 "Freedman"
+ BWN_Insurgency_rc_ADJ:0 "Freedman"
+ BWN_Insurgency_lb_ADJ:0 "Freedman"
+ BWN_Insurgency_ss_ADJ:0 "Freedman"
+ BWN_Insurgency_jc_ADJ:0 "Freedman"
+ BWN_Insurgency_ds_ADJ:0 "Freedman"
+ BWN_Insurgency_cn_ADJ:0 "Freedman"
+ BWN_Insurgency_an_ADJ:0 "Freedman"
 
  UAR_Insurgency_ni:0 "Revolutionary Arabia"
  UAR_Insurgency_ni_DEF:0 "the Revolutionary Republic of Arabia"
@@ -3936,3 +3936,78 @@ ETR_Insurgency_an_ADJ:0 "Ugyhur"
   NIC_Coalition_Government_ds_ADJ:0 "Nicaraguan"
   NIC_Coalition_Government_cn_ADJ:0 "Nicaraguan"
   NIC_Coalition_Government_an_ADJ:0 "Nicaraguan"
+
+  AME_American_Empire_ni:0 "American Empire"
+  AME_American_Empire_ni_DEF:0 "The American Empire"
+  AME_American_Empire_ds:0 "American Empire"
+  AME_American_Empire_ds_DEF:0 "American Empire"
+  AME_American_Empire_rc:0 "American Empire"
+  AME_American_Empire_rc_DEF:0 "American Empire"
+  AME_American_Empire_an:0 "American Empire"
+  AME_American_Empire_an_DEF:0 "American Empire"
+  AME_American_Empire_cn:0 "American Empire"
+  AME_American_Empire_cn_DEF:0 "American Empire"
+  AME_American_Empire_lb:0 "American Empire"
+  AME_American_Empire_lb_DEF:0 "American Empire"
+  AME_American_Empire_ss:0 "American Empire"
+  AME_American_Empire_ss_DEF:0 "American Empire"
+  AME_American_Empire_jc:0 "American Empire"
+  AME_American_Empire_jc_DEF:0 "The American Empire"
+  AME_American_Empire_ni_ADJ:0 "American"
+  AME_American_Empire_rc_ADJ:0 "American"
+  AME_American_Empire_lb_ADJ:0 "American"
+  AME_American_Empire_ss_ADJ:0 "American"
+  AME_American_Empire_jc_ADJ:0 "American"
+  AME_American_Empire_ds_ADJ:0 "American"
+  AME_American_Empire_cn_ADJ:0 "American"
+  AME_American_Empire_an_ADJ:0 "American"
+
+  ATX_Insurgency_ni:0 "Texan Settler Coalition"
+  ATX_Insurgency_ni_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_ds:0 "Texan Settler Coalition"
+  ATX_Insurgency_ds_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_rc:0 "Texan Settler Coalition"
+  ATX_Insurgency_rc_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_an:0 "Texan Settler Coalition"
+  ATX_Insurgency_an_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_cn:0 "Texan Settler Coalition"
+  ATX_Insurgency_cn_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_lb:0 "Texan Settler Coalition"
+  ATX_Insurgency_lb_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_ss:0 "Texan Settler Coalition"
+  ATX_Insurgency_ss_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_jc:0 "Texan Settler Coalition"
+  ATX_Insurgency_jc_DEF:0 "The Texan Settler Coalition"
+  ATX_Insurgency_ni_ADJ:0 "Texan"
+  ATX_Insurgency_rc_ADJ:0 "Texan"
+  ATX_Insurgency_lb_ADJ:0 "Texan"
+  ATX_Insurgency_ss_ADJ:0 "Texan"
+  ATX_Insurgency_jc_ADJ:0 "Texan"
+  ATX_Insurgency_ds_ADJ:0 "Texan"
+  ATX_Insurgency_cn_ADJ:0 "Texan"
+  ATX_Insurgency_an_ADJ:0 "Texan"
+
+  ATX_Independent_ni:0 "Republic of East Texas"
+  ATX_Independent_ni_DEF:0 "The Republic of East Texas"
+  ATX_Independent_ds:0 "Republic of East Texas"
+  ATX_Independent_ds_DEF:0 "The Republic of East Texas"
+  ATX_Independent_rc:0 "Republic of East Texas"
+  ATX_Independent_rc_DEF:0 "The Republic of East Texas"
+  ATX_Independent_an:0 "Republic of East Texas"
+  ATX_Independent_an_DEF:0 "The Republic of East Texas"
+  ATX_Independent_cn:0 "Republic of East Texas"
+  ATX_Independent_cn_DEF:0 "The Republic of East Texas"
+  ATX_Independent_lb:0 "Republic of East Texas"
+  ATX_Independent_lb_DEF:0 "The Republic of East Texas"
+  ATX_Independent_ss:0 "Republic of East Texas"
+  ATX_Independent_ss_DEF:0 "The Republic of East Texas"
+  ATX_Independent_jc:0 "Republic of East Texas"
+  ATX_Independent_jc_DEF:0 "The Republic of East Texas"
+  ATX_Independent_ni_ADJ:0 "Texan"
+  ATX_Independent_rc_ADJ:0 "Texan"
+  ATX_Independent_lb_ADJ:0 "Texan"
+  ATX_Independent_ss_ADJ:0 "Texan"
+  ATX_Independent_jc_ADJ:0 "Texan"
+  ATX_Independent_ds_ADJ:0 "Texan"
+  ATX_Independent_cn_ADJ:0 "Texan"
+  ATX_Independent_an_ADJ:0 "Texan"
