--- a/localisation/english/PB_bookmarks_l_english.yml
+++ b/localisation/english/PB_bookmarks_l_english.yml
@@ -38,3 +38,6 @@
  SPR_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
  ITA_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
  POR_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
+ GRE_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
+ SER_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
+ HUN_PAX_BRITANNICA_DESC:0 "Coming In A Future Update"
