A huge load of work

--- a/localisation/english/PB_Generic_Decisions_l_english.yml
+++ b/localisation/english/PB_Generic_Decisions_l_english.yml
@@ -424,3 +424,7 @@
   Orbit.20.t:0 "The Launch of the Epsilon 1" 
   Orbit.20.d:0 "We've received some interesting news from Carnegia, where a think tank funded by the EIEC and Carnegie Steel was able to launch a small rocket containing a similarly small radio operated drone.\n\nWhile the launch itself was only a minor success, the research has proven the potential for launching a functioning satellite into orbit. Furthermore, it may very well mean the potential to launch a living human being into orbit. It's become clear to both ourselves and our rivals on the continent that this technology cannot be allowed to go to waste. Britain's early frontiers came in Africa and the Americas, and we ensured that we secured ourselves in those regions. Now, however, we have a new scramble on our hands.\n\nThe union jack will be the first standard to touch the stars, no matter how much blood, sweat or tears are needed."
   Orbit.20.a:0 "We cannot afford to lose our chance at conquering the cosmos."
+
+  Orbit.21.t:0 "America offers Orbital Research Data"
+  Orbit.21.d:0 "The Americans have approached our Orbital Research program and offered some useful insights based on their own data. While they’ve neglected to mention exactly how they’ve acquired this information, it will nonetheless be helpful in our ongoing efforts to defeat the Russian Empire."
+  Orbit.21.a:0 "Thanks?"
