--- a/localisation/english/PB_Mexico_l_english.yml
+++ b/localisation/english/PB_Mexico_l_english.yml
@@ -422,10 +422,10 @@
   PB_MEX_Operation_Screeming_South_desc:0 "The terrain of Yucatan and Guatemala possess the most difficult terrain of all our possible fronts. Their hostile jungles will no doubt slow down the advancement of our troops and it is this very reason that we must dedicate our full might towards this theatre."
 
   PB_MEX_Northern_Consolidation:0 "Northern Consolidation"
-  PB_MEX_Northern_Consolidation_desc:0 ""
+  PB_MEX_Northern_Consolidation_desc:0 "With the completely military conquest of the north, we have completed one of the many steps that will allow the Mexican Empire to return to the glory it deserves. While our newspapers and Mexican nationalists within these new territories celebrate our victory, we are faced with the immediate consequences of conquest. There are those in the northern territories who resist our control. We cannot allow any chance of an uprising to occur, to this end we must begin a campaign of consolidation in the north. By eliminating rivals to our power and a vast propaganda effort, we can make sure our control over this region is an iron grip."
 
   PB_MEX_Fortify_The_Borderlands:0 "Fortify The Borderlands"
-  PB_MEX_Fortify_The_Borderlands_desc:0 ""
+  PB_MEX_Fortify_The_Borderlands_desc:0 "Our efforts to prepare for the reconquest of our former territories have not gone unnoticed by our neighbours. They too have begun to modernize and expand their militaries, perhaps even preparing pre-emptive strikes against us. Further complicating matters are raids being committed along the border. We don't know for sure if these are backed by our neighbours or are simply random bandits but they must not continue. To defend ourselves from any possible counter attacks, a series of forts along our borders have to be constructed. To defend not just our people, but our lands too."
 
   PB_MEX_Ready_The_Workers:0 "Ready The Workers"
   PB_MEX_Ready_The_Workers_desc:0 ""
