The other UC work

--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -102,6 +102,7 @@ PB_AME_Decrease_Freedmen_Support_tt:0 "Support from the £UC_SI_Freedmen §YFree
 AME_Melbourne_Acroplex_Overhaul_Project:0 "The Melbourne Arcoplex Renewal Project"
 AME_Melbourne_Acroplex_Overhaul_Population_Shift:0 "Melbourne Arcoplex Population Redistribution"
 AME_Lang_EIEC_Showdown:0 "The EIEC calls Lang's Bluff"
+AME_Empire_Supercomplex_Construction:0 "The Empire Supercomplex Project"
 
 AME_Freedmen_Agitation:0 "Freedman Agitation"
 AME_Southerner_Agitation:0 "Southern Agitation"
@@ -341,7 +342,7 @@ AME_Gas_Attack_DESC:0 "Your armies will get an offensive bonus and improved atta
 AME_Gas_Defense_tt:0 "\nUnlocks the §HGas Defense§! ability, which is an improved version of the §YLast Stand§! ability\n\n"
 AME_Gas_Attack_tt:0 "\nUnlocks the §HGas Assault§! ability, which grants improved attack overall and significantly improved attack against §YForts§!\n\n"
 
-AME_PB_AME_Initiate_Cloning_Program_tt:0 "We will reactivate the Tuskeegee Genetic Archive Program and attempt to put it to §Ypractical§! use."
+AME_PB_AME_Initiate_Cloning_Program_tt:0 "We will reactivate the Tuskegee Genetic Archive Program and attempt to put it to §Ypractical§! use."
 AME_PB_AME_Initiate_Cloning_Program_Decisions_tt:0 "£decision_icon_small In order for the program to succeed, we will need to §Ycollect§! healthy genetic samples from the male population until we find an §Yappropriate specimen§!."
 
 PB_AME_Eyes_in_the_Skies_tt:0 "£decision_icon_small Decisions will be unlocked to conduct reconnaissance operations across North America."
@@ -1125,6 +1126,12 @@ Unicom_Conservatives.4.a:0 "Well, at least it's not a total disaster."
 Unicom_Conservatives.5.t:0 "The State of the South"
 Unicom_Conservatives.5.d:0 ""
 Unicom_Conservatives.5.a:0 "Wow, it's somehow worse than we could have ever anticipated."
+
+Unicom_Conservatives.6.t:0 "Appointing a New Prime Minister"
+Unicom_Conservatives.6.d:0 ""
+Unicom_Conservatives.6.a:0 "Charles Evan Hughes"
+Unicom_Conservatives.6.b:0 "Charles Dawes"
+Unicom_Conservatives.6.c:0 "Arthur Currie"
 
 Unicom_Socialists.1.t:0 "Lang throws down with Edison"
 Unicom_Socialists.1.d:0 ""
