--- a/localisation/english/PB_Mega_Cities_l_english.yml
+++ b/localisation/english/PB_Mega_Cities_l_english.yml
@@ -6,6 +6,7 @@
   GER_Mega_City_Name:0 "§OGERMANIA§!"
   RUS_Mega_City_Name:0 "§OGREATER ST. PETERSBURG§!"
   AME_Mega_City_Name1:0 "§OMELBOURNE SPRAWL§!"
+  AME_Mega_City_Name2:0 "§OEMPIRE SUPERCOMPLEX§!"
 
   Megacity_London:0 "The World City"
   Megacity_Paris:0 "La Ressuscité"
@@ -14,6 +15,7 @@
   Megacity_Petrograd:0 "The Cradle of the Russian Empire"
   Megacity_Melbourne:0 "The Modern Sodom"
   Megacity_Melbourne_Reformed:0 "America's Second Capital"
+  Megacity_EmpCity:0 "The Other World City"
 
   ENG_World_City_gfx:0 "£Megacity_London"
   Megacity_Paris_GFX:0 "£Megacity_Paris"
@@ -21,6 +23,7 @@
   Megacity_Frankfurt_GFX:0 "£Megacity_Frankfurt"
   Megacity_Petrograd_GFX:0 "£Megacity_Petrograd"
   Megacity_Melbourne_GFX:0 "£Megacity_Melbourne"
+  Megacity_EmpCity_GFX:0 "£Megacity_EmpCity"
 
   MGC_London:0 "London Sprawl Ownership Effects"
   MGC_Paris1:0 "New Paris Ownership Effects"
@@ -31,6 +34,7 @@
   MGC_Melbourne2:0 "Melbourne Supercolony Ownership Effects"
   MGC_Melbourne3:0 "Melbourne Supercolony Ownership Effects"
   MGC_Melbourne4:0 "Melbourne Supercolony Ownership Effects"
+  MGC_EmpCity:0 "Empire Supercomplex Ownership Effects"
 
   ENG_London_Bonuses_1:0 "§G+0.05 Naval Experience Gain Daily§!\n§G+12% Dockyard Industrial Output§!"
   Megacity_Paris_Bonuses:0 "§G+10% Industrial Repair Speed§!\n§R-5% Stability§!"
@@ -41,10 +45,12 @@
   Megacity_Melbourne_Bonuses1:0 "§R+10% Consumer Goods Demand§!\n§R-5% Monthly Population§!"
   Megacity_Melbourne_Bonuses2:0 "§R+5% Consumer Goods Demand§!\n§R-8% Monthly Population§!"
   Megacity_Melbourne_Bonuses3:0 "§G+10% Factory Output§!\n§R-10% Monthly Population§!"
+  Megacity_EmpCity_Bonuses:0 "§G+10% Naval Range§!\n§G+15% Dockyard Build Speed§!"
 
   PB_Megacity_Paris_Change_Effect_tt:0 "The Effects of the §YParis§! Megacity will change!\n\nParis will now grant the following effects\n§G+15% Building Speed§!\n§G+15% Stability§!\n\n"
 
   PB_Megacity_Melbourne_Change_Effect_tt:0 "The Effects of the §YMelbourne§! Megacity will change!\n\n"
+  PB_Megacity_Empire_Constructed_tt:0 "New York City will be transformed into the Empire §YSupercomplex§!"
 
   Megacity.1.t:0 "LONDON SPRAWL - DOCUMENTATION FILE"
   Megacity.1.d:0 "The exact origin of London's Megacity status is heavily debated by modern sociologists; however it is generally agreed that the population boom of the Second Renaissance marked a critical shift in the city's history. Contemporary London is one of the most populous cities in the world, with the upper canopy of the skyline reaching nearly half a kilometer above ground. London is commonly referred to as a layered megacity, a term that denotes megacities that expand vertically rather than horizontally. Much of the population resides on ground level, or Old London, where pre-Renaissance architecture stands entombed by the upper canopy skyline or displaced by superstructural pillars that hold the former aloft. The Imperial and British Parliaments remain on the ground level as per tradition, despite proposals to relocate them to the upper canopy.\n\nLondon's status as a critical port in Britain and the centerpiece of the British Empire has led to a syncretic population. Following the implementation of Malthusian Sociogenetics laws, immigration became a key part of London's population growth. The population is primarily European, with significant minorities of Africans, Freedmen and Asians.\n\nDue to most of the population living beneath the upper canopy, English architects were forced to seek inventive solutions to the lack of sunlight. Much of London remains in a state of perpetual twilight, leading to significant outbreaks of hypovitaminosis D. By 1921, however, introduction of Vitamin D supplement to city water management successfully reduced hypovitaminosis cases in Old London by 30%.\n\nThe Upper Canopy of London, sometimes called New London, is the least populated section. The altitude of the upper canopy requires many residents to use supplemental oxygen when outdoors, and cool weather clothing is often worn year-round. The canopy is primarily populated by London's upper class and aristocracy, though some only reside there during the Summer. The cost of piping warm water and waste management make the London canopy by far one of the most expensive places to live on Earth."
@@ -73,3 +79,7 @@
   MegacityTransfer.5.t:0 "Assuming control of the Melbourne Megacity"
   MegacityTransfer.5.d:0 "We now own the surrounding region containing the Melbourne Megacity, granting us access to the benefits and drawbacks of the area."
   MegacityTransfer.5.a:0 "Understood"
+
+  MegacityTransfer.6.t:0 "Assuming control of the New York Megacity"
+  MegacityTransfer.6.d:0 "We now own the surrounding region containing the New York Megacity, granting us access to the benefits and drawbacks of the area."
+  MegacityTransfer.6.a:0 "Understood"
