--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -1149,6 +1149,12 @@ Unicom_Socialists.4.t:0 "Must we fight?"
 Unicom_Socialists.4.d:0 ""
 Unicom_Socialists.4.a:0 "We're all reasonable men here, right?"
 
+Unicom_Socialists.5.t:0 "Appointing a New Prime Minister"
+Unicom_Socialists.5.d:0 ""
+Unicom_Socialists.5.a:0 "Jack Lang"
+Unicom_Socialists.5.b:0 "James M. Cox"
+Unicom_Socialists.5.c:0 "J.S Woodsworth"
+
 Unicom_SoCreds.1.t:0 "Second Social Credit Congress"
 Unicom_SoCreds.1.d:0 ""
 Unicom_SoCreds.1.a:0 "The Technolabourites maintain control!"
