A bunch of UC work

--- a/localisation/english/PB_News_Events_l_english.yml
+++ b/localisation/english/PB_News_Events_l_english.yml
@@ -958,6 +958,38 @@
   PBNews.242.d:0 "The Imperial Civil War came to a decisive end today as the British public’s fading appetite for the war across the Atlantic Ocean forced British delegates in Philadelphia to the negotiating table with the Coalition of Independent States. The original stipulations put forward by America during their declaration of independence were agreed upon by London as well as some other additional territorial demands. Notably the transfer of Bermuda to American occupation. Military parades across America and the C.I.S have taken place but the same cannot be said for the now crumbling Anglo empire. "
   PBNews.242.a:0 "Anglo hegemony continues but with a new face and flag."
 
+  PBNews.243.t:0 "UNIONIST VICTORY IN AMERICA"
+  PBNews.243.d:0 "Having faced a tough uphill battle, the Federal-Unionists of the United Commonwealth have narrowly won the snap elections. Prime Minister Coolidge is expected to resign his post as party lead citing health concerns, leaving the appointment of a new prime minister to the consolidated conservative parliament.\n\nThe move marks a continuation of the American status quo, as the Federal-Unionists continue their fiscally conservative policies."
+  PBNews.243.a:0 "The Coolidge legacy is secure."
+
+  PBNews.244.t:0 "PROGESSIVE VICTORY IN AMERICA"
+  PBNews.244.d:0 ""
+  PBNews.244.a:0 "The torch of idealism is lit."
+
+  PBNews.245.t:0 "LABOUR VICTORY IN AMERICA"
+  PBNews.245.d:0 ""
+  PBNews.245.a:0 "The future is red for America"
+  
+  PBNews.246.t:0 "SOCRED VICTORY IN AMERICA"
+  PBNews.246.d:0 ""
+  PBNews.246.a:0 "A new national future awaits"
+
+  PBNews.247.t:0 "LANG DECLARES NATIONAL EMERGENCY"
+  PBNews.247.d:0 ""
+  PBNews.247.a:0 "The Big Fella has arrived in force"
+
+  PBNews.248.t:0 "EMPIRE CITY ESTABLISHED"
+  PBNews.248.d:0 ""
+  PBNews.248.a:0 "Why do they get TWO mega cities?"
+
+  PBNews.249.t:0 "PRINCE GEORGE DEAD, AGED 70"
+  PBNews.249.d:0 ""
+  PBNews.249.a:0 "The Empire mourns yet another prince"
+
+  PBNews.250.t:0 "QUEEN VICTORIA DEAD"
+  PBNews.250.d:0 ""
+  PBNews.250.a:0 "A new British Empire follows in her wake"
+
   stockcrisis.1.t:0 "The Stock Crisis hits the Empire"
   stockcrisis.1.d:0 ""
   stockcrisis.1.a:0 "Oh dear"
