--- a/localisation/english/PB_United_Commonwealth_l_english.yml
+++ b/localisation/english/PB_United_Commonwealth_l_english.yml
@@ -505,14 +505,6 @@ PB_AME_Align_with_the_Jersey_Clique:0 "Align with the Jersey Clique"
 PB_AME_Compromise_with_Southerners:0 "Compromise with Southerners"
 PB_AME_American_Renewal_Project:0 "The American Renewal Project" 
 PB_AME_Eyes_to_the_West:0 "Eyes to the West"
-PB_AME_Revoke_the_Wartime_Language_Act:0 "Revoke the Wartime Language Act"
-PB_AME_Proper_Americanism:0 "Speaking Proper American"
-PB_AME_Discourage_Anti_Papism:0 "Discourage Anti-Papism"
-PB_AME_Nation_of_Protestants:0 "Protect the Protestant Nation"
-PB_AME_Maintain_Arms_Length_Policy:0 "Maintain the Arms Length Policy"
-PB_AME_Reconcile_with_Quebec:0 "Reconciliation with Quebec"
-PB_AME_Retain_the_Francophile_Ban:0 "Retain the Francophile Ban"
-PB_AME_Deregulate_Midwestern_Politics:0 "End the Francophobe Policies"
 PB_AME_War_on_Megaplex_Unemployment:0 "The War on Megaplex Unemployment"
 PB_AME_Innovate_on_Acroplex_Farming:0 "Innovate on Acroplex Farming"
 PB_AME_Localized_Hydroponics_Scheme:0 "Localized Hydroponics"
@@ -811,21 +803,27 @@ AME_PB_R_B_Bennett_HOG:0 "R. B. Bennett"
 AME_PB_John_W_Davis_HOG:0 "John W. Davis"
 AME_PB_J_S_Woodsworth_HOG:0 "J. S. Woodsworth"
 AME_PB_John_Curtin_HOG:0 "John Curtin"
+AME_PB_Charles_Hughes_HOGL:0 "Charles Evan Hughes"
+AME_PB_Calvin_Coolidge_HOG:0 "Calvin Coolidge"
+AME_PB_John_Blackmore_HOG:0 "John Horne Blackmore"
 
 AME_PB_Robert_Menzies_FM:0 "Robert Menzies"
 AME_PB_Charles_Evans_Hughes_FM:0 "Charles E. Hughes"
 AME_PB_Harry_Hopkins_FM:0 "Harry Hopkins"
 AME_PB_Thomas_Douglas_FM:0 "Thomas Douglas"
+AME_PB_WAC_Bennett_FM:0 "W. A. C. Bennett"
 
 AME_PB_Herbert_Hoover_EM:0 "Herbert Hoover"
 AME_PB_Earle_Paege_EM:0 "Earle Paege"
 AME_PB_William_King_EM:0 "William M. King"
 AME_PB_Jack_Holloway_EM:0 "Jack Holloway"
+AME_PB_William_Aberhart_EM:0 "William Aberhart"
 
 AME_PB_Ray_Lyman_Wilbur_IM:0 "Ray L. Wilbur"
 AME_PB_John_G_Sargent_IM:0 "John G. Sargent"
 AME_PB_Joe_Collings_IM:0 "Joe Collings"
 AME_PB_Jack_Beasley_IM:0 "Jack Beasley"
+AME_PB_Louis_Even_IM:0 "Louis Even"
 
 ##########################
 # FOCUSES
@@ -1783,4 +1781,3 @@ Bleeding_South7opta:0 "Lets hope that never happens again"
 Bleeding_South8title:0 "The Sins Of Our Fathers"
 Bleeding_South8desc:0 "We have failed to contain the Southern threat and as a result we are forced to reconcile with these backwards barbarians, traitors, and infidels. As it stands the scoreboard reads "One to One" but there is always time for another game.\n\nAnother victory." 
 Bleeding_South8opta:0 "I wish I was Dixie"
-
