--- a/localisation/english/core_l_english.yml
+++ b/localisation/english/core_l_english.yml
@@ -1886,6 +1886,10 @@
  GENERATE:0 "Generate"
  LIST_AND:0 ", and "
  CHARACTER_NAME_TOOLTIP:0 "$NAME|Y$"
+ CHARACTER_ADVISOR_ON_ADD_TOOLTIP:0 "When hired:"
+ CHARACTER_ADVISOR_ON_REMOVE_TOOLTIP:0 "When fired:"
+ CHARACTER_ADVISOR_CANT_BE_FIRED_ONCE_HIRED:0 "§HAdvisor can't be fired once hired§!"
+ CHARACTER_ADVISOR_CANT_BE_FIRED:0 "§RAdvisor can't be fired§!"
  RAILWAY_CONNECTION_TOOLTIP_HEADER:0 "§HRailway Connection§! Level $LEVEL|H$"
  RAILWAY_CONNECTION_TOOLTIP_BETWEEN:0 "$PLACE1|H$ to $PLACE2|H$"
  RAILWAY_CONNECTION_TOOLTIP_THROUGHPUT:0 "Supply Throughput Cap: $SUPPLY|H$ £supply_texticon£"
