New State Category - HIVEMIND WORK WORK

--- a/localisation/english/PB_Mega_Cities_l_english.yml
+++ b/localisation/english/PB_Mega_Cities_l_english.yml
@@ -1,5 +1,8 @@
 ﻿l_english:
 
+
+  megacity:0 "Industrial Megacity"
+
   # Megacity Names #
   ENG_Mega_City_Name:0 "§OTHE LONDON SPRAWL§!"
   FRA_Mega_City_Name:0 "§ONEW PARIS§!"
