--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -251,13 +251,18 @@
  VICTORY_POINTS_6380:0 "Moscow"
  VICTORY_POINTS_525:0 "Kiev"
  VICTORY_POINTS_3529:0 "Tsaritsyn"
- VICTORY_POINTS_3151:0 "St. Petersburg"
+ VICTORY_POINTS_6174:0 "St. Petersburg"
  VICTORY_POINTS_6474:0 "Yuzivka"
  VICTORY_POINTS_9417:0 "Rostov-na-Donu"
  VICTORY_POINTS_11375:0 "Nizhnegorod"
  VICTORY_POINTS_117:0 "Novgorod"
  VICTORY_POINTS_121:0 "Yaroslavl"
  VICTORY_POINTS_306:0 "Smolensk"
+ VICTORY_POINTS_9197:0 "Volkhov"
+ VICTORY_POINTS_149:0 "Wsewoloschsk"
+ VICTORY_POINTS_11032:0 "Gatchina"
+ VICTORY_POINTS_6095:0 "Kirishi"
+ VICTORY_POINTS_9190:0 "Lodeynoe Pole"
  VICTORY_POINTS_413:0 "Voronezh"
  VICTORY_POINTS_418:0 "Kharkiv"
  VICTORY_POINTS_7203:0 "Agadir"
@@ -331,7 +336,20 @@
  VICTORY_POINTS_9753:0 "Astrakhan"
  VICTORY_POINTS_10641:0 "Yakutsk"
  VICTORY_POINTS_10696:0 "Omsk"
- VICTORY_POINTS_11159:1 "Äänislinna"
+ VICTORY_POINTS_11159:1 "Petrosawodsk"
+ VICTORY_POINTS_3187:1 "Sortavala"
+ VICTORY_POINTS_110:1 "Waldai"
+ VICTORY_POINTS_9131:1 "Wologda"
+ VICTORY_POINTS_3124:1 "Tscherepowez"
+ VICTORY_POINTS_11234:1 "Velikiye Luki"
+ VICTORY_POINTS_11121:1 "Oulu"
+ VICTORY_POINTS_11141:1 "Kuopio"
+ VICTORY_POINTS_9056:1 "Jyväskylä"
+ VICTORY_POINTS_9073:1 "Lahti"
+ VICTORY_POINTS_9183:1 "Kouvola"
+ VICTORY_POINTS_11248:1 "Rjasan"
+ VICTORY_POINTS_124:1 "Rovaniemi"
+ VICTORY_POINTS_9061:1 "Joensuu"
  VICTORY_POINTS_11202:0 "Pskov"
  VICTORY_POINTS_11241:0 "Vitebsk"
  VICTORY_POINTS_11225:0 "Samara"
