--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -1072,7 +1072,17 @@
  VICTORY_POINTS_11476:0 "Millerowo"
  VICTORY_POINTS_6724:0 "Simferopol"
  VICTORY_POINTS_737:0 "Kljutschewoje"
- VICTORY_POINTS_9729:0 "Melitopol"
+ VICTORY_POINTS_11700:0 "Melitopol"
+ VICTORY_POINTS_11351:0 "Tambov"
+ VICTORY_POINTS_6398:0 "Lipetsk"
+ VICTORY_POINTS_9258:0 "Penza"
+ VICTORY_POINTS_487:0 "Michailowka"
+ VICTORY_POINTS_9475:0 "Kamyschin"
+ VICTORY_POINTS_11450:0 "Kamensk-Shakhtinsky"
+ VICTORY_POINTS_11434:0 "Schachty"
+ VICTORY_POINTS_13266:0 "Taganrog"
+ VICTORY_POINTS_502:0 "Kramatorsk"
+ VICTORY_POINTS_523:0 "Starobilsk"
  VICTORY_POINTS_11691:0 "Uschgorod"
  VICTORY_POINTS_11411:0 "Stanisławów"
  VICTORY_POINTS_462:0 "Chmelnizki"
