Russia Now has accurate Railways (thx paradox)

--- a/localisation/english/victory_points_l_english.yml
+++ b/localisation/english/victory_points_l_english.yml
@@ -45,10 +45,14 @@
  VICTORY_POINTS_11301:0 "Białystok"
  VICTORY_POINTS_572:0 "Luzk"
  VICTORY_POINTS_560:0 "Pinsk"
- VICTORY_POINTS_3203:0 "Mosyr"
+ VICTORY_POINTS_6232:0 "Mosyr"
  VICTORY_POINTS_3350:0 "Bobruisk"
  VICTORY_POINTS_9289:0 "Mogiljow"
  VICTORY_POINTS_11391:0 "Pastawy"
+ VICTORY_POINTS_186:0 "Kotlas"
+ VICTORY_POINTS_6121:0 "Syktywkar"
+ VICTORY_POINTS_4640:0 "Narva"
+ VICTORY_POINTS_9304:0 "Baranavichy"
  VICTORY_POINTS_3320:0 "Wilno"
  VICTORY_POINTS_3392:0 "Brzesc Litewski"
  VICTORY_POINTS_3393:0 "Grodno"
@@ -271,7 +275,7 @@
  VICTORY_POINTS_12100:0 "Nador"
  VICTORY_POINTS_989:0 "Oujda"
  VICTORY_POINTS_957:0 "Vladivostok"
- VICTORY_POINTS_1278:0 "Ufa"
+ VICTORY_POINTS_291:0 "Ufa"
  VICTORY_POINTS_7081:0 "Annaba"
  VICTORY_POINTS_10059:0 "Batna"
  VICTORY_POINTS_4150:0 "Sidi bel Abbès"
@@ -880,7 +884,7 @@
  VICTORY_POINTS_4073:0 "Suez"
  VICTORY_POINTS_12465:0 "Khiva"
  VICTORY_POINTS_4482:0 "Mary"
- VICTORY_POINTS_1623:0 "Bukhara"
+ VICTORY_POINTS_9605:0 "Bukhara"
  VICTORY_POINTS_10671:0 "Samarkand"
  VICTORY_POINTS_12581:0 "Kokand"
  VICTORY_POINTS_12583:0 "Bishkek"
@@ -1084,6 +1088,10 @@
  VICTORY_POINTS_502:0 "Kramatorsk"
  VICTORY_POINTS_523:0 "Starobilsk"
  VICTORY_POINTS_11691:0 "Uschgorod"
+ VICTORY_POINTS_11537:0 "Oral"
+ VICTORY_POINTS_11523:0 "Pokrovsk"
+ VICTORY_POINTS_12128:0 "Orenburg"
+ VICTORY_POINTS_6124:0 "Kirov"
  VICTORY_POINTS_11411:0 "Stanisławów"
  VICTORY_POINTS_462:0 "Chmelnizki"
  VICTORY_POINTS_11427:0 "Tarnopol"
